# DTEAM-django-practical-test

./: Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
CVProject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
main/: constants.py  middleware.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
main/fixtures/: cv_data.json
main/migrations/: 0001_initial.py  0002_requestlog.py
nginx/: Dockerfile  nginx.conf
templates/: base.html
templates/main/: cv_detail.html  cv_list.html  cv_pdf_template.html  cv_translated.html  request_log_list.html  settings.html
